# bevy-tetris

./: .gitignore  Cargo.toml  README.md  index-ff1300881bfd37c2.js  index.html
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
.metals/: metals.lock.db
example/: step1.rs  step2.rs  step3.rs
src/: bricks.rs  consts.rs  inputs.rs  main.rs  screen.rs  speeds.rs  states.rs  tetrom.rs
