[package]
authors = ["corbamico <corbamico@163.com>"]
edition = "2021"
name = "bevy-tetris"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_utils = "0.6"
lazy_static = "1.4"
rand = "0.8"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"